[package]
name = "laravel_decrypt"
version = "0.1.0"
authors = ["Sakti Dwi Cahyono <saktidc@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.7.5"
base64 = "0.13.0"
block-modes = "0.8.1"
eframe = "0.15.0" # Gives us egui, epi and web+native backends
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[features]
default = []
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
