[package]
name = "laravel_decrypt"
version = "0.1.0"
authors = ["Sakti Dwi Cahyono <saktidc@icloud.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
base64 = "0.13.0"
block-modes = "0.8.1"
eframe = "0.32.0"                                # Gives us egui, epi and web+native backends
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
persistence = [
    "eframe/persistence",
] # Enable if you want to persist app state on shutdown

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
